--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,27 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+#Docker
+.docker/
+docker-compose.override.yml
+#IDE and editor folders
+.idea/
+.vscode/
+**__pycache__/
+
+#enironment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.development.local
+.env.test.local
+.env.production.local
